deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ivanadimitrova/finalprojectkiii:latest
          ports:
            - containerPort: 80
