service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supcase-service
spec:
  selector:
    app: supcase
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
